# tiger

./: LICENSE  tiger.cabal
app/: Ast.hs  Interp.hs  Main.hs  Parser.hs
src/Tiger/: Ast.hs  Parser.hs
test/Tiger/: ParserSpec.hs
