cabal-version:      3.0
name:               tiger
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Ilya Burinsky
maintainer:         burinskiy992@gmail.com
category:           Compilers
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tiger
    import:           warnings
    main-is:          Main.hs
    other-modules:
    build-depends:
        base ^>=4.16.4.0,
        megaparsec,
        parser-combinators >=1.3.0,
        text
    default-extensions:
        ImportQualifiedPost
    hs-source-dirs:   app
    default-language: Haskell2010
